--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.0.0'
     compile 'com.android.support:design:24.0.0'
+    compile 'com.facebook.android:facebook-android-sdk:4.+'
+    compile 'com.android.support:support-v4:24.0.0'
+    compile 'junit:junit:4.12'
 }
